<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ad_unit_id" translatable="false">ca-app-pub-7556847109824867/9409131345</string>
    <string name="app_name">AutoMute</string>
    <string name="title_rule_list">AutoMute</string>
    <string name="title_setting">Settings</string>
    <string name="title_add_muter">Add a muter</string>
    <string name="title_edit_muter">Edit a muter</string>
    <string name="action_add">Add new one</string>
    <string name="action_settings">Settings</string>
    <string name="never">Never</string>
    <string name="every_day">Everyday</string>
    <string name="day_concat" translatable="false">.</string>
    <string name="rule_default_title">Muter</string>
    <string name="missed_rule_has_been_deleted">Missed rule has been deleted</string>
    <string name="please_enter_title">Please enter title</string>
    <string name="date">date</string>
    <string name="content_description_ic_between" translatable="false">content description of image between start and end time</string>
    <string name="content_description_ic_add" translatable="false">content description of image of add button</string>
    <string name="short_monday">M</string>
    <string name="short_tuesday">T</string>
    <string name="short_wednesday">W</string>
    <string name="short_thursday">T</string>
    <string name="short_friday">F</string>
    <string name="short_saturday">S</string>
    <string name="short_sunday">S</string>
    <string name="action_done">Done</string>
    <string name="enable_vibrate">Vibrate On</string>
    <string name="repeat">Repeat</string>
    <string name="list_card_undo_title">Undo</string>
    <plurals name="rule_list_card_undo_items">
        <item quantity="zero">No muter removed</item>
        <item quantity="one">1 muter removed</item>
        <item quantity="other">%d muter removed</item>
    </plurals>   
    <string name="notification_title">AutoMute started</string>
    <string name="notification_content">All sound muted.</string>
    <string name="notification_content_text_fmt">From %1$s to %2$s.</string>
    <string name="settings_disable_automute">Stop automute service</string>
    <string name="warning_start_must_earlier_than_end">Start time must be earlier than end time</string>
    <string name="warning_start_time_must_after_current">Start time must be after than current time</string>
    <string name="warning_end_time_must_after_current">End time must be after than current time</string>
    <string name="warning_repeat_less_than_24">Can not set repeat rule with more than 24 hours</string>
</resources>
