<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/rule_editor_title"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/please_enter_title"/>
      
    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            
		    <TextView
		        android:id="@+id/rule_editor_start_date"
		        style="@style/rule_editor_date"
		        android:layout_width="match_parent"
		        android:layout_height="32dp"
		        android:hint="@string/date" />

	        <EditText
	            android:id="@+id/rule_editor_start_time"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:focusable="false"
	            android:inputType="time" />

        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_between"
            android:contentDescription="@string/content_description_ic_between"/>
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            
		    <TextView
		        android:id="@+id/rule_editor_end_date"
		        style="@style/rule_editor_date"
		        android:layout_width="match_parent"
		        android:layout_height="32dp"
		        android:hint="@string/date" />

            <EditText
                android:id="@+id/rule_editor_end_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:inputType="time" />

        </LinearLayout>

    </LinearLayout>

    <CheckBox
        android:id="@+id/rule_editor_checkbox_vibrate"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_vibrate" />

    <TextView
        android:id="@+id/rule_editor_header_repeat"
        style="@style/rule_editor_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/repeat" />
    
    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:text="@string/short_monday"/>
            <CheckBox 
                android:id="@+id/rule_editor_repeat_checkbox_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:text="@string/short_tuesday"/>
            <CheckBox 
                android:id="@+id/rule_editor_repeat_checkbox_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:text="@string/short_wednesday"/>
            <CheckBox 
                android:id="@+id/rule_editor_repeat_checkbox_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:text="@string/short_thursday"/>
            <CheckBox 
                android:id="@+id/rule_editor_repeat_checkbox_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:text="@string/short_friday" />

	        <CheckBox
	            android:id="@+id/rule_editor_repeat_checkbox_friday"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center" />

        </LinearLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:text="@string/short_saturday"/>
            <CheckBox 
                android:id="@+id/rule_editor_repeat_checkbox_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:text="@string/short_sunday"/>
            <CheckBox 
                android:id="@+id/rule_editor_repeat_checkbox_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </LinearLayout>        
	</LinearLayout>
</LinearLayout>
